--- a/src/assets/less/theme.less
+++ b/src/assets/less/theme.less
@@ -8,7 +8,7 @@
 @second-color: #373d41;
 @third-color: #a2a2a2;
 @border-color: #bcbcbc;
-
+@light-color:#fff;
 @font-size: 14px;
 @font-color: @first-color;
 
