--- a/src/assets/less/theme.less
+++ b/src/assets/less/theme.less
@@ -8,9 +8,11 @@
 @second-color: #373d41;
 @third-color: #a2a2a2;
 @border-color: #bcbcbc;
-@light-color:#fff;
+@light-color:#ffffff;
+@dark-color: #000000;
 @font-size: 14px;
-@font-color: @first-color;
+@font-dark-color: @first-color;
+@font-light-color: @light-color;
 
 @global-padding: 30px;
 
