--- a/src/assets/less/global.less
+++ b/src/assets/less/global.less
@@ -20,7 +20,21 @@
 .margin-bottom-20 {
     margin-bottom: 20px;
 }
-
+.margin-right-10 {
+    margin-right: 10px
+}
+.margin-right-20 {
+    margin-right: 20px
+}
+.margin-right-30 {
+    margin-right: 30px
+}
+.margin-right-40 {
+    margin-right: 40px
+}
+.margin-right-50 {
+    margin-right: 50px
+}
 .padding-10{
     padding: 10px;
 }
@@ -75,7 +89,7 @@
 }
 
 .text-main{
-    color: @font-color;
+    color: @font-dark-color;
 }
 .text-warn {
     color: @waring-color !important;
